--- a/index.html
+++ b/index.html
@@ -6,53 +6,65 @@
 <title>主要政党 政策比較（2026）</title>
 
 <style>
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Hiragino Kaku Gothic ProN", "Yu Gothic", Meiryo, sans-serif;
-  line-height: 1.6;
-  margin: 16px;
-  background: #f9f9f9;
+body{
+  font-family: -apple-system, BlinkMacSystemFont, "Hiragino Kaku Gothic ProN",
+               "Yu Gothic", Meiryo, sans-serif;
+  margin:16px;
+  background:#f6f6f6;
+  color:#111;
+  line-height:1.75;
+  font-size:16px;
 }
 
-h1 {
-  font-size: 22px;
-  margin-bottom: 12px;
+h1{
+  font-size:22px;
+  margin-bottom:20px;
 }
 
-h2 {
-  font-size: 18px;
-  margin-top: 32px;
-  border-bottom: 2px solid #333;
+h2{
+  font-size:20px;
+  margin-top:40px;
+  margin-bottom:12px;
+  border-bottom:2px solid #333;
+  padding-bottom:6px;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 12px;
+h3{
+  font-size:18px;
+  margin-top:24px;
 }
 
-th, td {
-  border: 1px solid #999;
-  padding: 8px;
-  vertical-align: top;
-  font-size: 14px;
+table{
+  width:100%;
+  border-collapse:collapse;
+  background:#fff;
+  margin-top:12px;
 }
 
-th {
-  background: #eee;
+th, td{
+  border:1px solid #ccc;
+  padding:12px;
+  vertical-align:top;
 }
 
-.party-jimin { color: #c00000; font-weight: bold; }
-.party-ishin { color: #2e8b57; font-weight: bold; }
-.party-chudo { color: #1f4fd8; font-weight: bold; }
-.party-kokumin { color: #0b2a5b; font-weight: bold; }
-.party-sansei { color: #f39800; font-weight: bold; }
-.party-kyosan { color: #8b0000; font-weight: bold; }
-
-.section {
-  background: #ffffff;
-  padding: 12px;
-  margin-top: 24px;
+th{
+  background:#eee;
+  width:26%;
 }
+
+.section{
+  background:#fff;
+  padding:16px;
+  margin-top:16px;
+  border-radius:6px;
+}
+
+.party-jimin{color:#b00020;font-weight:bold;}
+.party-ishin{color:#0b8043;font-weight:bold;}
+.party-chudo{color:#1a73e8;font-weight:bold;}
+.party-kokumin{color:#1a237e;font-weight:bold;}
+.party-sansei{color:#ef6c00;font-weight:bold;}
+.party-kyosan{color:#8b0000;font-weight:bold;}
 </style>
 </head>
 
@@ -60,115 +72,169 @@ th {
 
 <h1>主要政党 政策比較（2026）</h1>
 
-<!-- 1ページ目：一覧 -->
 <div class="section">
-<h2>政策一覧（比較）</h2>
+<b>見方</b><br>
+縦軸：政党 ／ 横軸：政策テーマ。<br>
+スマホでの閲覧を前提に、要点を簡潔にまとめています。
+</div>
+
+<h2>主要政策 一覧</h2>
 
 <table>
 <tr>
-  <th>政党</th>
-  <th>消費税</th>
-  <th>エネルギー</th>
-  <th>教育・子育て</th>
-  <th>外国人政策</th>
+<th>政党</th>
+<th>消費税</th>
+<th>エネルギー</th>
+<th>教育・子育て</th>
+<th>外国人・ルール</th>
 </tr>
 
 <tr>
-  <td class="party-jimin">自民党</td>
-  <td>食料品の時限的な消費税ゼロを検討</td>
-  <td>原発活用と再エネの併用</td>
-  <td>こども家庭庁を軸に支援強化</td>
-  <td>不法滞在対策・制度厳格化</td>
+<th class="party-jimin">自民党</th>
+<td>食料品の消費税減税を含む物価高対策を検討</td>
+<td>安定供給とGXを両立</td>
+<td>こども家庭庁中心の支援強化</td>
+<td>不法滞在ゼロと制度厳格化</td>
 </tr>
 
 <tr>
-  <td class="party-ishin">維新</td>
-  <td>2年間の食料品消費税ゼロ</td>
-  <td>原発再稼働と制度改革</td>
-  <td>世帯単位課税・負担軽減</td>
-  <td>社会保障改革とルール整備</td>
+<th class="party-ishin">維新</th>
+<td>税・社会保障改革で家計負担軽減</td>
+<td>原発再稼働＋再エネ活用</td>
+<td>世帯単位課税・年少扶養控除</td>
+<td>制度整理と厳格運用</td>
 </tr>
 
 <tr>
-  <td class="party-chudo">中道</td>
-  <td>恒久的に食料品消費税ゼロ</td>
-  <td>再エネ主軸・原発は条件付き</td>
-  <td>切れ目ない子育て支援</td>
-  <td>人権重視・共生型政策</td>
+<th class="party-chudo">中道</th>
+<td>恒久的な消費税減税</td>
+<td>再エネ主軸・原発は条件付き</td>
+<td>児童手当拡充・教育無償化</td>
+<td>人権配慮と共生重視</td>
 </tr>
 
 <tr>
-  <td class="party-kokumin">国民民主</td>
-  <td>賃金が物価＋2％に安定するまで一律5％</td>
-  <td>原発活用と再エネの現実路線</td>
-  <td>教育国債・扶養控除重視</td>
-  <td>管理と上限を重視</td>
+<th class="party-kokumin">国民民主</th>
+<td>景気下支えとして消費税率5％</td>
+<td>原発活用と安定供給</td>
+<td>教育国債・扶養控除復活</td>
+<td>管理と上限による受入</td>
 </tr>
 
 <tr>
-  <td class="party-sansei">参政党</td>
-  <td>消費税の廃止</td>
-  <td>国産エネルギーの模索</td>
-  <td>子ども一人月10万円給付</td>
-  <td>移民国家にしない</td>
+<th class="party-sansei">参政党</th>
+<td>消費税廃止</td>
+<td>国産エネルギー模索</td>
+<td>子ども一人月10万円</td>
+<td>移民国家にしない</td>
 </tr>
 
 <tr>
-  <td class="party-kyosan">共産党</td>
-  <td>消費税廃止を目指し当面5％</td>
-  <td>原発ゼロ・再エネ中心</td>
-  <td>子どもの権利重視</td>
-  <td>排外主義に反対</td>
+<th class="party-kyosan">共産党</th>
+<td>消費税廃止を目指し減税</td>
+<td>原発ゼロ・再エネ中心</td>
+<td>子どもの権利重視</td>
+<td>排外主義に反対</td>
 </tr>
 </table>
-</div>
 
-<!-- 2ページ目以降：説明 -->
-<div class="section">
 <h2>消費税について</h2>
-<p>
-各党は物価高や家計負担への対応として、消費税の減税・廃止を掲げています。
-時限的措置、恒久減税、税率引き下げなど手法は異なります。
-</p>
-</div>
 
 <div class="section">
+<h3 class="party-jimin">自民党</h3>
+物価高への対応として、食料品の消費税減税などを含めた対策を検討。財政運営との両立を重視。
+
+<h3 class="party-ishin">維新</h3>
+消費税単独ではなく、税と社会保障を一体で改革し、家計負担を抑える方針。
+
+<h3 class="party-chudo">中道</h3>
+生活者の負担軽減を目的に、食料品の消費税を恒久的に引き下げる立場。
+
+<h3 class="party-kokumin">国民民主</h3>
+景気を下支えする対策として、賃金上昇率が物価＋2％に安定するまで消費税率を5％に引き下げる。
+
+<h3 class="party-sansei">参政党</h3>
+家計の可処分所得を直接増やすため、消費税の廃止を掲げる。
+
+<h3 class="party-kyosan">共産党</h3>
+消費税の廃止を目標とし、当面は税率を5％へ引き下げる。
+</div>
+
 <h2>エネルギー政策</h2>
-<p>
-原発を活用する現実路線から、脱原発・再生可能エネルギー中心まで立場は分かれています。
-安定供給と脱炭素の両立が争点です。
-</p>
-</div>
 
 <div class="section">
+<h3 class="party-jimin">自民党</h3>
+電力の安定供給と脱炭素を両立するGXを推進。再生可能エネルギーの主力化を進める。
+
+<h3 class="party-ishin">維新</h3>
+原子力の早期再稼働と再生可能エネルギーの活用により、エネルギー自給率向上を目指す。
+
+<h3 class="party-chudo">中道</h3>
+再生可能エネルギーを主軸としつつ、安全性と地元合意を前提に原発再稼働を容認。
+
+<h3 class="party-kokumin">国民民主</h3>
+原子力の活用による安定供給を重視し、エネルギー安全保障と国民負担の抑制を図る。
+
+<h3 class="party-sansei">参政党</h3>
+海外依存を減らすため、活用可能な国産エネルギーの模索を掲げる。
+
+<h3 class="party-kyosan">共産党</h3>
+原発ゼロを明確にし、再生可能エネルギー中心の社会を目指す。
+</div>
+
 <h2>教育・子育て</h2>
-<p>
-教育費負担の軽減、児童手当、扶養控除、給付金などを通じて、
-子育て世帯への支援を強化する点は共通しています。
-</p>
-</div>
 
 <div class="section">
-<h2>外国人政策</h2>
-<p>
-受け入れの管理強化を重視する政党と、人権や共生を重視する政党に分かれています。
-制度の厳格化と社会統合が論点です。
-</p>
+<h3 class="party-jimin">自民党</h3>
+こども家庭庁を中心に、児童手当拡充や保育支援などを一体的に推進。
+
+<h3 class="party-ishin">維新</h3>
+世帯単位課税や年少扶養控除の復活など、子育て世帯の負担軽減を重視。
+
+<h3 class="party-chudo">中道</h3>
+児童手当の拡充や教育費無償化を進め、切れ目ない支援を行う。
+
+<h3 class="party-kokumin">国民民主</h3>
+教育国債により国民負担を抑えつつ投資を行い、年少扶養控除の復活と高校生扶養控除の維持を主張。子ども・子育て支援金には反対。
+
+<h3 class="party-sansei">参政党</h3>
+子ども一人につき月10万円の教育給付金を支給し、家庭での子育てを重視。
+
+<h3 class="party-kyosan">共産党</h3>
+子どもの権利を重視し、医療費無償化や子育て支援の拡充を進める。子ども・子育て支援金に反対。
 </div>
 
-<!-- 最終ページ -->
+<h2>外国人・ルール</h2>
+
 <div class="section">
+<h3 class="party-jimin">自民党</h3>
+不法滞在ゼロを目標に、在留管理の厳格化と制度の適正運用を進める。
+
+<h3 class="party-ishin">維新</h3>
+外国人受け入れの制度整理と厳格運用を通じ、社会の秩序維持を重視。
+
+<h3 class="party-chudo">中道</h3>
+人権に配慮しつつ、共生社会の構築を目指す。
+
+<h3 class="party-kokumin">国民民主</h3>
+移民を推進する立場ではなく、必要な産業分野に限り国が上限とルールを定めて管理。
+
+<h3 class="party-sansei">参政党</h3>
+日本を移民国家にしない立場を明確にし、受け入れ総量の厳格管理を主張。
+
+<h3 class="party-kyosan">共産党</h3>
+排外主義に反対し、外国人の人権と共生を重視。
+</div>
+
 <h2>各党首の主張</h2>
 
-<ul>
-<li><span class="party-jimin">自民党</span>：責任ある積極財政へ転換</li>
-<li><span class="party-ishin">維新</span>：社会保障改革と制度の見直し</li>
-<li><span class="party-chudo">中道</span>：生活者ファーストの政治</li>
-<li><span class="party-kokumin">国民民主</span>：もっと手取りを増やす</li>
-<li><span class="party-sansei">参政党</span>：ひとりひとりが日本</li>
-<li><span class="party-kyosan">共産党</span>：ブレずに国民のために働く</li>
-</ul>
-
+<div class="section">
+<p class="party-jimin">自民党：責任ある積極財政へ</p>
+<p class="party-ishin">維新：社会保障改革・制度の見直し</p>
+<p class="party-chudo">中道：生活者ファースト</p>
+<p class="party-kokumin">国民民主：もっと手取りを増やす</p>
+<p class="party-sansei">参政党：ひとりひとりが日本</p>
+<p class="party-kyosan">共産党：ブレずに国民のために働く</p>
 </div>
 
 </body>
